better docker compose and multistage dockerfile for sub 200mb image with no security issues